[package]
name = "ftbl_in"
version = "0.1.0"
authors = ["shockham <samuel.hockham@gmail.com>"]
edition = "2018"

[dependencies]
warp = "0.1"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
log = "0.4"
reqwest = "0.9"
chrono = " 0.4"
ansi_term = "0.12"
env_logger = "0.7"
futures = "0.1"
